# stereotactic-target-pred

./: .env  .gitignore  README.md  fabricatetasks.py  pyproject.toml  render.yaml
.github/: auto_assign.yml
.github/workflows/: auto_assign_reviewers.yml  deploy.yml  rebuild_docker_container.yml
config/: config.yaml
docker/: Dockerfile  apt-install.sh  build.sh  startup.sh
resources/: STN.pkl  target_template.fcsv
stereotactic_target_pred/: apply_model.py  utils.py  wsgi.py
stereotactic_target_pred/backend/: app.py  apply_model.py  connector.py  stereotaxy_route.py  utils.py  visualizations.py
stereotactic_target_pred/frontend/: index.html
stereotactic_target_pred/frontend/public/: tpl-MNI2009cAsym_afids.fcsv
stereotactic_target_pred/frontend/src/: App.css  App.jsx  env.jsx
stereotactic_target_pred/frontend/src/components/: file_upload.jsx  navbar.jsx
stereotactic_target_pred/frontend/src/stylesheets/: file_upload.css  navbar.css
stereotactic_target_pred/stereotaxy_backend/: apply_model.py  utils.py
stereotactic_target_pred/stereotaxy_frontend/: index.html
stereotactic_target_pred/stereotaxy_frontend/frontend/: package-lock.json
stereotactic_target_pred/stereotaxy_frontend/frontend/src/: index.css
