[tool.poetry]
name = "stereotactic-target-pred"
version = "0.1.0"
description = ""
authors = ["mackenziesnyder <masnyder2@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
