[tool.poetry]
name = "stereotactic-target-pred"
version = "0.1.0"
description = ""
authors = ["mackenziesnyder <masnyder2@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0"
flask-cors = "^5.0.1"
werkzeug = "^3.1.3"
pyyaml = "^6.0.2"
numpy = "^2.2.4"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
nibabel = "^5.3.2"
plotly = "^6.0.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
